<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SpeedProfile" Id="{de9cb2d4-c45b-4d04-a607-05d44af51553}">
    <Declaration><![CDATA[TYPE ST_SpeedProfile :
STRUCT
	InitialVelocity : LREAL;
	MaxVelocity : LREAL;
	Acceleration : LREAL;
	Deceleration : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>